--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "types": "tsc --pretty --noEmit",
+    "prepare": "husky install",
+    "format": "prettier --write \"src/{components,app}/**/*.{ts,tsx,js,jsx}\""
   },
   "dependencies": {
     "react": "^18",
@@ -21,6 +24,13 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.1.4",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "autoprefixer": "^10.0.1",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-storybook": "^0.6.10",
+    "husky": "^8.0.3",
+    "prettier": "^2.8.3"
   }
 }
