--- a/package.json
+++ b/package.json
@@ -12,25 +12,27 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\""
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
-    "typescript": "5.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-storybook": "^0.6.10",
     "husky": "^8.0.3",
-    "prettier": "^2.8.3"
+    "postcss": "^8",
+    "prettier": "^2.8.3",
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.3"
   }
 }
