--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "swiper": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
