--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-query": "^3.39.3",
     "swiper": "^10.0.0"
   },
